Fix header 2 submenu alignment

--- a/.dev/assets/shared/css/header/header-2.scss
+++ b/.dev/assets/shared/css/header/header-2.scss
@@ -47,6 +47,10 @@
 			& li:not(:last-child) {
 				margin-right: var(--go-navigation--padding--x, 2vw);
 			}
+
+			& ul.sub-menu li.menu-item {
+				margin-right: inherit;
+			}
 		}
 
 		& .header__extras {
